@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2023 DBeaver Corp and others
+ * Copyright (C) 2010-2024 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,7 +32,6 @@ import org.jkiss.utils.IOUtils;
 
 import java.io.*;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
@@ -40,7 +39,6 @@ import java.text.NumberFormat;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 /**
  * Content manipulation utilities
@@ -53,14 +51,12 @@ public class ContentUtils {
     private static final Log log = Log.getLog(ContentUtils.class);
 
     public static Path getLobFolder(DBRProgressMonitor monitor, DBPPlatform application)
-        throws IOException
-    {
+        throws IOException {
         return application.getTempFolder(monitor, LOB_DIR);
     }
 
     public static Path createTempContentFile(DBRProgressMonitor monitor, DBPPlatform application, String fileName)
-        throws IOException
-    {
+        throws IOException {
         return makeTempFile(
             monitor,
             getLobFolder(monitor, application),
@@ -78,8 +74,7 @@ public class ContentUtils {
     }
 
     public static Path makeTempFile(DBRProgressMonitor monitor, Path folder, String name, String extension)
-        throws IOException
-    {
+        throws IOException {
         name = CommonUtils.escapeFileName(name);
         Path tempFile = folder.resolve(name + "-" + System.currentTimeMillis() + "." + extension);  //$NON-NLS-1$ //$NON-NLS-2$
         Files.createFile(tempFile);
@@ -87,8 +82,7 @@ public class ContentUtils {
     }
 
     public static void saveContentToFile(InputStream contentStream, File file, DBRProgressMonitor monitor)
-        throws IOException
-    {
+        throws IOException {
         try (OutputStream os = new FileOutputStream(file)) {
             copyStreams(contentStream, file.length(), os, monitor);
         }
@@ -102,8 +96,7 @@ public class ContentUtils {
     }
 
     public static void saveContentToFile(Reader contentReader, File file, String charset, DBRProgressMonitor monitor)
-        throws IOException
-    {
+        throws IOException {
         try (Writer writer = new OutputStreamWriter(new FileOutputStream(file), charset)) {
             copyStreams(contentReader, file.length(), writer, monitor);
         }
@@ -121,15 +114,14 @@ public class ContentUtils {
         long contentLength,
         OutputStream outputStream,
         DBRProgressMonitor monitor)
-        throws IOException
-    {
+        throws IOException {
         monitor.beginTask("Copy binary content", contentLength < 0 ? STREAM_COPY_BUFFER_SIZE : (int) contentLength);
         try {
             byte[] buffer = new byte[STREAM_COPY_BUFFER_SIZE];
             long totalCopied = 0;
             NumberFormat nf = new ByteNumberFormat(ByteNumberFormat.BinaryPrefix.ISO);
             String subtaskSuffix = " / " + nf.format(contentLength);
-            for (;;) {
+            for (; ; ) {
                 if (monitor.isCanceled()) {
                     break;
                 }
@@ -144,8 +136,7 @@ public class ContentUtils {
                     monitor.subTask(nf.format(totalCopied) + subtaskSuffix);
                 }
             }
-        }
-        finally {
+        } finally {
             monitor.done();
         }
     }
@@ -155,12 +146,11 @@ public class ContentUtils {
         long contentLength,
         Writer writer,
         DBRProgressMonitor monitor)
-        throws IOException
-    {
+        throws IOException {
         monitor.beginTask("Copy character content", contentLength < 0 ? STREAM_COPY_BUFFER_SIZE : (int) contentLength);
         try {
             char[] buffer = new char[STREAM_COPY_BUFFER_SIZE];
-            for (;;) {
+            for (; ; ) {
                 if (monitor.isCanceled()) {
                     break;
                 }
@@ -171,8 +161,7 @@ public class ContentUtils {
                 writer.write(buffer, 0, count);
                 monitor.worked(STREAM_COPY_BUFFER_SIZE);
             }
-        }
-        finally {
+        } finally {
             monitor.done();
         }
     }
@@ -180,8 +169,7 @@ public class ContentUtils {
     public static long calculateContentLength(
         File file,
         String charset)
-        throws IOException
-    {
+        throws IOException {
         return calculateContentLength(
             new FileInputStream(file),
             charset);
@@ -190,22 +178,18 @@ public class ContentUtils {
     public static long calculateContentLength(
         InputStream stream,
         String charset)
-        throws IOException
-    {
+        throws IOException {
         return calculateContentLength(
             new InputStreamReader(
                 stream,
                 charset));
     }
 
-    public static long calculateContentLength(
-        Reader reader)
-        throws IOException
-    {
-        try {
+    public static long calculateContentLength(Reader reader) throws IOException {
+        try (reader) {
             long length = 0;
             char[] buffer = new char[STREAM_COPY_BUFFER_SIZE];
-            for (;;) {
+            for (; ; ) {
                 int count = reader.read(buffer);
                 if (count <= 0) {
                     break;
@@ -214,56 +198,30 @@ public class ContentUtils {
             }
             return length;
         }
-        finally {
-            reader.close();
-        }
     }
 
-    public static void close(Closeable closeable)
-    {
+    public static void close(Closeable closeable) {
         try {
             closeable.close();
-        }
-        catch (IOException e) {
+        } catch (IOException e) {
             log.warn("Error closing stream", e);
         }
     }
 
-    public static String readFileToString(File file) throws IOException
-    {
-        try (InputStream fileStream = new FileInputStream(file)) {
-            UnicodeReader unicodeReader = new UnicodeReader(fileStream, StandardCharsets.UTF_8);
-            StringBuilder result = new StringBuilder((int) file.length());
-            char[] buffer = new char[4000];
-            for (;;) {
-                int count = unicodeReader.read(buffer);
-                if (count <= 0) {
-                    break;
-                }
-                result.append(buffer, 0, count);
-            }
-            return result.toString();
-        }
-    }
-
-    public static String readToString(InputStream is, Charset charset) throws IOException
-    {
+    public static String readToString(InputStream is, Charset charset) throws IOException {
         return IOUtils.readToString(new UnicodeReader(is, charset));
     }
 
-    public static boolean isTextContent(DBDContent content)
-    {
+    public static boolean isTextContent(DBDContent content) {
         String contentType = content == null ? null : content.getContentType();
         return contentType != null && contentType.toLowerCase(Locale.ENGLISH).startsWith("text");
     }
 
-    public static boolean isTextMime(String mimeType)
-    {
+    public static boolean isTextMime(String mimeType) {
         return mimeType != null && mimeType.toLowerCase(Locale.ENGLISH).startsWith("text");
     }
 
-    public static boolean isTextValue(Object value)
-    {
+    public static boolean isTextValue(Object value) {
         if (value == null) {
             return false;
         }
@@ -271,7 +229,7 @@ public class ContentUtils {
             return true;
         }
         if (value instanceof byte[]) {
-            for (byte b : (byte[])value) {
+            for (byte b : (byte[]) value) {
                 if (!Character.isLetterOrDigit(b) && !Character.isSpaceChar(b) && !Character.isISOControl(b)) {
                     return false;
                 }
@@ -280,13 +238,11 @@ public class ContentUtils {
         return true;
     }
 
-    public static boolean isXML(DBDContent content)
-    {
+    public static boolean isXML(DBDContent content) {
         return MimeTypes.TEXT_XML.equalsIgnoreCase(content.getContentType());
     }
 
-    public static boolean isJSON(DBDContent content)
-    {
+    public static boolean isJSON(DBDContent content) {
         return MimeTypes.TEXT_JSON.equalsIgnoreCase(content.getContentType());
     }
 
@@ -380,7 +336,7 @@ public class ContentUtils {
     public static boolean deleteFileRecursive(Path file) {
         if (Files.isDirectory(file)) {
             try {
-                List<Path> files = Files.list(file).collect(Collectors.toList());
+                List<Path> files = Files.list(file).toList();
                 for (Path ch : files) {
                     if (!deleteFileRecursive(ch)) {
                         return false;
